--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,8 @@ h3{
     color:#000000;
     display: inline-block;
     border-bottom: solid 2px #000000 ;
-
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .music{
