--- a/my_web/css/style.css
+++ b/my_web/css/style.css
@@ -25,7 +25,7 @@ a:hover{
 header{
     width:100%;
     height: 258px;
-    background: url(..img/wa_main.png) no-repeat;
+    background: url(../img/wa_main.png) no-repeat;
     background-size: contain;
     text-align: center;
     margin: 75px 0px;
